# frank-manul

./: .gitignore  CMakeLists.txt  README.md  build.sh  flash.sh  release.sh
boards/: iris_m2.h
drivers/: psram_allocator.c
drivers/audio/: CMakeLists.txt
drivers/uart_pio/: CMakeLists.txt  uart_rx.pio  uart_tx.pio
lib/DispHSTX/: CMakeLists.txt  Readme.txt
lib/DispHSTX/Pico/DispHSTX/PicoSDKDemo/: CMakeLists.txt  config.h  include.h
lib/DispHSTX/Pico/DispHSTX/PicoSDKDemo/src/: main.cpp
lib/DispHSTX/_display/: Readme.txt  _include.h  _makefile.inc  display.c
lib/DispHSTX/_doc/: Readme.txt
lib/DispHSTX/_lib/: Readme.txt  _include.h  _makefile.inc  lib.c
lib/DispHSTX/_lib/inc/: lib_drawcan16.h  lib_rand.h  lib_text.h
lib/DispHSTX/_lib/src/: lib_rand.c
lib/DispHSTX/_tools/: Readme.txt
src/: audio.c  audio.h  board_config.h  browser.c  browser.h  browser_config.c  browser_config.h  config.h  display.c  display.h  flash.c  flash.h  font.c  font.h  framebuf.c  framebuf.h  html.c  html.h  http.c  http.h  keyboard.c  keyboard.h  keyboard_ps2.c  keyboard_ps2.h  keyboard_usb.c  keyboard_usb.h  main.c  netcard.c  netcard.h  render.c  render.h  serial.c  serial.h  sound.c  sound.h  url.c  url.h  wifi_setup.c  wifi_setup.h
